refactoring star_select on applies controller

--- a/app/views/applies/show.html.erb
+++ b/app/views/applies/show.html.erb
@@ -12,6 +12,7 @@
 
 <% if headhunter_signed_in? %>
     <div>
-      <%= link_to "Star This Apply", profile_star_select_path(apply_id: @apply.id, user_id: @apply.user_id, headhunter_id: current_headhunter.id, profile_id: @apply.user_id), method: :post %>
+      <%= link_to "Star This Apply", apply_star_select_path(@apply, profile_id: @apply.user_id), method: :post %>
     </div>
 <% end %>
+
