--- a/app/views/stars/index.html.erb
+++ b/app/views/stars/index.html.erb
@@ -17,7 +17,7 @@
           <p>
             <%= link_to "Remove Star", star_path(star), 
                                       method: :delete,
-                                      data: { confirm: "Are you sure?" } %><br>  
+                                      data: { confirm: "Are you sure?" } %> 
           </p>
         <% else %>
           <p>There is no apply selected as a star.</p>      
