user and headhunter visit index show and view the applies correct

--- a/app/views/applies/index.html.erb
+++ b/app/views/applies/index.html.erb
@@ -1,16 +1,37 @@
 <h3>Applies</h3>
 
 <% if headhunter_signed_in? %>
-  <% @applies.each do |apply| %>
-    <%= link_to apply do %>
-      <dt>Apply ID<dt> 
-      <dd><%= apply.id %></dd>
-      <dt>Job Title</dt> 
-      <dd><%= apply.job.title %></dd>
-      <dt>User E-mail</dt> 
-      <dd><%= apply.user_email %></dd>
+  <% unless @applies.empty? %>
+    <% @applies.each do |apply| %>
+      <%= link_to apply do %>
+        <dt>Apply ID<dt> 
+        <dd><%= apply.id %></dd>
+        <dt>Job Title</dt> 
+        <dd><%= apply.job.title %></dd>
+        <dt>User E-mail</dt> 
+        <dd><%= apply.user_email %></dd>
+      <% end %>
     <% end %>
-  <% end %>
+  <% else %>  
+    <p>There aren't any apply.</p>
+  <% end %>  
+<% end %>
+
+<% if user_signed_in? %>
+  <% unless @applies.empty? %>
+    <% @applies.each do |apply| %>
+        <% if apply.user_id == current_user.id %>
+          <%= link_to apply do %>
+            <dt>Apply ID<dt> 
+            <dd><%= apply.id %></dd>
+            <dt>Job Title</dt> 
+            <dd><%= apply.job.title %></dd>
+          <% end %>
+        <% end %>  
+    <% end %>
+  <% else %>  
+    <p>There aren't any apply.</p>
+  <% end %>  
 <% end %>
 
 <%= paginate @applies %>
