searchs now on description and title job too

--- a/app/views/jobs/search.html.erb
+++ b/app/views/jobs/search.html.erb
@@ -1,4 +1,4 @@
-<h3>All results for <%= @code %></h3>
+<h3>All results for <%= @word %></h3>
 
 <% if @jobs.any? %>
     <p><%= @jobs.count %> jobs found.</p>
