--- a/app/views/applies/show.html.erb
+++ b/app/views/applies/show.html.erb
@@ -16,7 +16,7 @@
     </div>
 <% end %>
 
-<% if user_signed_in? %>
+<% if user_signed_in? || headhunter_signed_in? %>
     <%= link_to "Remove Apply", apply_path(@apply), 
                                 method: :delete,
                                 data: { confirm: "Are you sure?" } %>
