User cant see other user profile

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,7 +3,7 @@
 <% end %>  
 <nav>
   <% if user_signed_in? %>
-    <%= link_to 'Create/Edit Profile', new_profile_path %> -
+    <%= link_to 'Profile', new_profile_path %> -
     <%= link_to 'Openings', jobs_path %> -
     <%= link_to 'Logout User', destroy_user_session_path, method: :delete %> |
     <span>You are <%= current_user.email %></span> 
