--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -2,6 +2,8 @@
 
 <dt>Code</dt> 
 <dd><%= @job.code %></dd>
+<dt>Status</dt>
+<dd><%= @job.job_status.capitalize %></dd>
 <dt>Deadline to apply</dt> 
 <dd><%= @job.date %></dd>
 <dt>Description</dt>
