Update _forms and test to show errors to user

--- a/app/views/applies/_form.html.erb
+++ b/app/views/applies/_form.html.erb
@@ -1,3 +1,9 @@
+<% if @apply.errors.any? %>
+  <% @apply.errors.full_messages.each do |message|%>
+    <p><%= message %></p>
+  <% end %>  
+<% end %>
+
 <%= form_with model: apply do |form| %>
   <div>
     <%= form.submit %>
