--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,3 +1,9 @@
+<% if @comment.errors.any? %>
+  <% @comment.errors.full_messages.each do |message|%>
+    <p><%= message %></p>
+  <% end %>  
+<% end %>
+
 <%= form_with model: comment do |form| %>
     <p>
       <%= form.label :body %><br>
