--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,3 +1,9 @@
+<% if @job.errors.any? %>
+  <% @job.errors.full_messages.each do |message|%>
+    <p><%= message %></p>
+  <% end %>  
+<% end %>
+
 <%= form_with model: job do |form| %>
    <div>
     <%= form.label :title %>
