--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,3 +1,9 @@
+<% if @profile.errors.any? %>
+  <% @profile.errors.full_messages.each do |message|%>
+    <p><%= message %></p>
+  <% end %>  
+<% end %>
+
 <%= form_with model: profile do |form| %>
   <div>
     <%= form.label :name %><br>
