--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -26,12 +26,13 @@
 <% end %>
 
 <% if headhunter_signed_in? %>
-   <ul>
-      <li><%= link_to "Edit", edit_job_path(@job) %></li>
-      <li><%= link_to "Delete", job_path(@job),
-                                method: :delete,
-                                data: { confirm: "Are you sure?" } %></li>
-   </ul>
+  <%= render 'jobs/select_status' %>
+  <ul>
+    <li><%= link_to "Edit", edit_job_path(@job) %></li>
+    <li><%= link_to "Delete", job_path(@job),
+                              method: :delete,
+                              data: { confirm: "Are you sure?" } %></li>
+  </ul>
   <%= render 'jobs/applies' %>
 <% end %>
 
