--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -7,7 +7,7 @@
       <% if profile.social_name.blank? %>
         <%= link_to profile.name, profile %>
       <% else %>
-        <%= link_to profile.social_name, profile %><
+        <%= link_to profile.social_name, profile %>
       <% end %>
       </dd>
       <dt>ID</dt>
