--- a/app/views/applies/show.html.erb
+++ b/app/views/applies/show.html.erb
@@ -10,13 +10,23 @@
     <%= link_to "View Profile ", profile_path(@apply.user_id) %>  
 <% end %>
 
+<% if @apply.accepted_headhunter == false %>
+  <p>This application for a job offer was rejected.</p>
+  <dt>Headhunter Feedback</dt> 
+  <dd><%= @apply.feedback_headhunter %></dd>
+<% end %>
+
 <% if headhunter_signed_in? %>
     <div>
       <%= link_to "Star This Apply", stars_path(apply_id: @apply.id, profile_id: @apply.user_id, headhunter_id: current_headhunter.id), method: :post %>
     </div>
+    <div>
+      <%= link_to "Reject This Apply", edit_apply_path %>
+    </div>
 <% end %>
 
 <% if user_signed_in? || headhunter_signed_in? %>
+    <br>
     <%= link_to "Remove Apply", apply_path(@apply), 
                                 method: :delete,
                                 data: { confirm: "Are you sure?" } %>
