--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -21,7 +21,7 @@
 
 <% if user_signed_in? %>
   <ul>
-    <li><%= link_to "Apply", applies_path(@job, user_id: current_user.id), method: :post %></li>
+    <li><%= link_to "Apply", applies_path(job_id: @job.id, user_id: current_user.id), method: :post %></li>
   </ul>
 <% end %>
 
