--- a/app/views/jobs/_job.html.erb
+++ b/app/views/jobs/_job.html.erb
@@ -1,7 +1,4 @@
 <%= link_to job do %> 
-  <dt>Job</dt>
-  <dd><%= job.title %> - <%= job.code %></dd> 
+  <p><%= job.code %> - <%= job.title %></p>   
 <% end %>  
-<dt>Deadline</dt>
-<dd><%= job.date %></dd>
-<br>
+<p>Deadline: <%= job.date %></p>
