Headhunter edit a proposal

--- a/app/views/proposals/show.html.erb
+++ b/app/views/proposals/show.html.erb
@@ -15,7 +15,7 @@
 
 <% if headhunter_signed_in? %>
   <ul>
-    <li><%= link_to "Edit", edit_profile_path(1) %></li>
+    <li><%= link_to "Edit", edit_apply_proposal_path(@proposal) %></li>
   </ul>
 <% end %>
 
