--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -9,7 +9,9 @@
           <dd><%= comment.body %></dd>
           <p>
             <%= link_to 'Edit', edit_comment_path(comment) %> -
-            <%= link_to 'Delete', comment_path(comment), method: :delete, data: { confirm: 'Are you sure?' } %>
+            <%= button_to 'Delete', comment_path(comment), 
+                                  method: :delete, 
+                                  data: { confirm: 'Are you sure?' } %>
           </p>
         </div>
       <% end %>
