--- a/app/views/jobs/index_draft.html.erb
+++ b/app/views/jobs/index_draft.html.erb
@@ -1,7 +1,7 @@
-<h3>Openings</h3>
+<h3>Openings Draft</h3>
 
 <% if headhunter_signed_in? %>
-  <%= link_to 'Draft', index_draft_jobs_path %>
+  <%= link_to 'Published', jobs_path %> -
   <%= link_to 'Archived', index_archived_jobs_path %>
 <% end %>
 
@@ -11,7 +11,7 @@
       <%= render job %>       
     <% end %>
   <% else %>
-    <p>There are not any job opening published.</p>
+    <p>There are not any job opening drafted.</p>
   <% end %>  
 <% end %>
 <%= paginate @jobs %>
