--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -22,7 +22,7 @@
   
   <div>
     <%= form.label :salary %>
-    <%= form.text_field :salary %>
+    <%= form.number_field :salary %>
   </div>
   
   <div>
