--- a/app/views/jobs/_select_status.html.erb
+++ b/app/views/jobs/_select_status.html.erb
@@ -1,12 +1,14 @@
+<b><%= I18n.t('change_status') %></b>
+
 <% if @job.published? %>
-  <%= button_to "Change to Draft", drafted_job_path(@job.id) %>
-  <%= button_to "Change to Archived", archived_job_path(@job.id) %>
+  <%= button_to I18n.t('draft'), drafted_job_path(@job.id) %>
+  <%= button_to I18n.t('archived'), archived_job_path(@job.id) %>
 <% elsif @job.draft? %>
-  <%= button_to "Change to Published", published_job_path(@job.id) %>
-  <%= button_to "Change to Archived", archived_job_path(@job.id) %>   
+  <%= button_to I18n.t('published'), published_job_path(@job.id) %>
+  <%= button_to I18n.t('archived'), archived_job_path(@job.id) %>   
 <% else %>
-  <%= button_to "Change to Draft", drafted_job_path(@job.id) %>
-  <%= button_to "Change to Published", published_job_path(@job.id) %>
+  <%= button_to I18n.t('draft'), drafted_job_path(@job.id) %>
+  <%= button_to I18n.t('published'), published_job_path(@job.id) %>
 <% end %>
 
 
