--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,15 +1,15 @@
   <% if headhunter_signed_in? %>
-    <b>Your Comments</b>
+    <b><%= I18n.t('your_comments') %></b>
     <% @comments.each do |comment| %>
       <% if comment.headhunter_id == current_headhunter.id %>    
         <div>
           <dt><%= I18n.localize(comment.datetime, format: :short) %></dt> 
           <dd><%= comment.body %></dd>
           <p>
-            <%= link_to 'Edit', edit_comment_path(comment) %>
-            <%= button_to 'Delete', comment_path(comment), 
+            <%= link_to I18n.t('edit'), edit_comment_path(comment) %>
+            <%= button_to I18n.t('delete'), comment_path(comment), 
                                   method: :delete, 
-                                  data: { confirm: 'Are you sure?' } %>
+                                  data: { confirm: I18n.t('sure') } %>
           </p>
         </div>
       <% end %>
