--- a/app/views/jobs/_job.html.erb
+++ b/app/views/jobs/_job.html.erb
@@ -1,4 +1,4 @@
 <%= link_to job do %> 
   <p><%= job.code %> - <%= job.title %></p>   
 <% end %>  
-<p>Deadline: <%= I18n.localize(job.date) %></p>
+<p><%= I18n.t('deadline') %> <%= I18n.localize(job.date) %></p>
