--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,8 +1,8 @@
-<h3>Openings</h3>
+<h3><%= I18n.t('openings') %></h3>
 
 <% if headhunter_signed_in? %>
-  <%= link_to 'Draft', index_draft_jobs_path %>
-  <%= link_to 'Archived', index_archived_jobs_path %>
+  <%= link_to I18n.t('all_drafted'), index_draft_jobs_path %> -
+  <%= link_to I18n.t('all_archived'), index_archived_jobs_path %>
 <% end %>
 
 <% if headhunter_signed_in? || user_signed_in? %>
