--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,38 +1,38 @@
 <h4><%= @job.title %></h4>
 
-<dt>Code</dt> 
+<dt><%= Job.human_attribute_name(:code) %></dt> 
 <dd><%= @job.code %></dd>
-<dt>Status</dt>
+<dt><%= Job.human_attribute_name(:job_status) %></dt>
 <dd><%= @job.job_status.capitalize %></dd>
-<dt>Deadline to apply</dt> 
+<dt><%= Job.human_attribute_name(:date) %></dt> 
 <dd><%= I18n.localize(@job.date) %></dd>
-<dt>Description</dt>
+<dt><%= Job.human_attribute_name(:description) %></dt>
 <dd><%= @job.description %></dd>
-<dt>Skills</dt>
+<dt><%= Job.human_attribute_name(:skills) %></dt>
 <dd><%= @job.skills %></dd>
-<dt>Salary</dt>
+<dt><%= Job.human_attribute_name(:salary) %></dt>
 <dd><%= @job.salary %></dd>
-<dt>Company</dt>
+<dt><%= Job.human_attribute_name(:company) %></dt>
 <dd><%= @job.company %></dd>
-<dt>Level</dt>
+<dt><%= Job.human_attribute_name(:level) %></dt>
 <dd><%= @job.level %></dd>
-<dt>Place</dt>
+<dt><%= Job.human_attribute_name(:place) %></dt>
 <dd><%= @job.place %></dd>
 
 <% if user_signed_in? %>
   <ul>
-    <li><%= link_to "Apply", applies_path(job_id: @job.id, user_id: current_user.id), method: :post %></li>
+    <li><%= link_to I18n.t('apply'), applies_path(job_id: @job.id, user_id: current_user.id), method: :post %></li>
   </ul>
 <% end %>
 
 <% if headhunter_signed_in? %>
-  <%= render 'jobs/select_status' %>
   <div>
-    <%= link_to "Edit", edit_job_path(@job) %>
-    <%= button_to "Delete", job_path(@job),
+    <%= link_to I18n.t('edit'), edit_job_path(@job) %>
+    <%= button_to I18n.t('delete'), job_path(@job),
                               method: :delete,
-                              data: { confirm: "Are you sure?" } %>
+                              data: { confirm: I18n.t('sure') } %>
   </div>
+  <%= render 'jobs/select_status' %>
   <%= render 'jobs/applies' %>
 <% end %>
 
