--- a/app/views/profiles/show.erb
+++ b/app/views/profiles/show.erb
@@ -4,18 +4,18 @@
   <h3><%= @profile.social_name %></h3>
 <% end %>
 
-<dt>Birthday</dt> 
-<dd><%= @profile.birthdate %></dd>
-<dt>Description</dt> 
+<dt><%= Profile.human_attribute_name(:birthdate) %></dt> 
+<dd><%= I18n.l(@profile.birthdate, format: :default) %></dd>
+<dt><%= Profile.human_attribute_name(:description) %></dt> 
 <dd><%= @profile.description %></dd>
-<dt>Educational Background</dt>
+<dt><%= Profile.human_attribute_name(:educacional_background) %></dt>
 <dd><%= @profile.educacional_background %></dd>
-<dt>Experience</dt> 
+<dt><%= Profile.human_attribute_name(:experience) %></dt> 
 <dd><%= @profile.experience %></dd>
 
 <% if user_signed_in? %>
   <ul>
-    <li><%= link_to "Edit", edit_profile_path(@profile) %></li>
+    <li><%= link_to I18n.t('edit'), edit_profile_path(@profile) %></li>
   </ul>
 <% end %>
 
