--- a/app/views/stars/index.html.erb
+++ b/app/views/stars/index.html.erb
@@ -19,11 +19,11 @@
                                   data: { confirm: I18n.t('sure') } %> 
           </p>
     <% else %>
-      <p>There is no apply selected as a star.</p>      
+      <p><%= I18n.t('no_stars') %></p>      
     <% end %>
   <% end %>  
 <% else %>
-  <p>There is no apply selected as a star.</p>  
+  <p><%= I18n.t('no_stars') %></p>  
 <% end %>  
 
 <%= paginate @stars %>
