adj views and test to no jobs applies stars ptBR

--- a/app/views/applies/index.html.erb
+++ b/app/views/applies/index.html.erb
@@ -5,7 +5,7 @@
      <%= render apply %>
   <% end %>  
 <% else %>  
-  <p>There aren't any apply.</p>
+  <p><%= I18n.t('no_applies') %></p>
 <% end %>
 
 <%= paginate @applies %>
