refactoring views and delete controller messages

--- a/app/views/jobs/_applies.html.erb
+++ b/app/views/jobs/_applies.html.erb
@@ -5,6 +5,6 @@
         <%= render apply %> 
       <% end %>        
     <% else %>
-      <p>There is no apply for this job.</p>
+      <p><%= I18n.t('no_applies')%></p>
     <% end %>   
 <% end %>  
