--- a/app/views/jobs/_select_status.html.erb
+++ b/app/views/jobs/_select_status.html.erb
@@ -1,14 +1,7 @@
 <b><%= I18n.t('change_status') %></b>
 
-<% if @job.published? %>
-  <%= button_to I18n.t('draft'), drafted_job_path(@job.id) %>
-  <%= button_to I18n.t('archived'), archived_job_path(@job.id) %>
-<% elsif @job.draft? %>
-  <%= button_to I18n.t('published'), published_job_path(@job.id) %>
-  <%= button_to I18n.t('archived'), archived_job_path(@job.id) %>   
-<% else %>
-  <%= button_to I18n.t('draft'), drafted_job_path(@job.id) %>
-  <%= button_to I18n.t('published'), published_job_path(@job.id) %>
-<% end %>
+<%= button_to I18n.t('published'), published_job_path(@job.id) unless @job.published? %>
+<%= button_to I18n.t('draft'), drafted_job_path(@job.id) unless @job.draft? %>
+<%= button_to I18n.t('archived'), archived_job_path(@job.id) unless @job.archived? %> 
 
 
