--- a/app/views/jobs/index_archived.html.erb
+++ b/app/views/jobs/index_archived.html.erb
@@ -1,17 +1,6 @@
 <h3><%= I18n.t('all_archived') %></h3>
 
-<% if headhunter_signed_in? %>
-  <%= link_to I18n.t('all_published'), jobs_path %> -
-  <%= link_to I18n.t('all_drafted'), index_draft_jobs_path %>
-<% end %>
+<%= render 'jobs/select_index' %>
+<%= render 'jobs/indexed_jobs' %>
 
-<% if headhunter_signed_in? || user_signed_in? %>
-  <% if @jobs.any? %>  
-    <% @jobs.each do |job| %>
-      <%= render job %>       
-    <% end %>
-  <% else %>
-    <p><%= I18n.t('no_jobs') %></p>
-  <% end %>  
-<% end %>
 <%= paginate @jobs %>
