--- a/app/views/layouts/_notice.html.erb
+++ b/app/views/layouts/_notice.html.erb
@@ -1,8 +1,4 @@
 <div>
-  <% if notice %>
-    <p class="alert alert-success"><%= notice %></p>
-  <% end %>
-  <% if alert %>
-    <p class="alert alert-danger"><%= alert %></p>
-  <% end %>
+  <p class="alert-success"><%= notice if notice %> </p>
+  <p class="alert-danger"><%= alert if alert %> </p>
 </div>  
