--- a/app/views/jobs/_indexed_jobs.erb
+++ b/app/views/jobs/_indexed_jobs.erb
@@ -1,9 +1,8 @@
 <% if headhunter_signed_in? || user_signed_in? %>
   <% if @jobs.any? %>  
-    <% @jobs.each do |job| %>
-      <%= render job %>       
+    <% @jobs.each do |j| %>
+      <%= render j %>       
     <% end %>
-  <% else %>
-    <p><%= I18n.t('no_jobs') %></p>
   <% end %>  
+  <p><%= I18n.t('no_jobs') if @jobs.empty? %></p>
 <% end %>
