--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -19,11 +19,7 @@
 <dt><%= Job.human_attribute_name(:place) %></dt>
 <dd><%= @job.place %></dd>
 
-<% if user_signed_in? %>
-  <ul>
-    <li><%= link_to I18n.t('apply'), applies_path(job_id: @job.id, user_id: current_user.id), method: :post %></li>
-  </ul>
-<% end %>
+<%= link_to I18n.t('apply'), applies_path(job_id: @job.id, user_id: current_user.id), method: :post if user_signed_in? %>
 
 <% if headhunter_signed_in? %>
   <div>
