--- a/app/views/comments/edit.erb
+++ b/app/views/comments/edit.erb
@@ -1,3 +1,3 @@
-<h4>Edit your Comment</h4>
+<h3><%= I18n.t('edit') %> <%= Comment.model_name.human %></h3>
 
 <%= render "form", comment: @comment %>
