--- a/app/views/profiles/edit.erb
+++ b/app/views/profiles/edit.erb
@@ -1,3 +1,3 @@
-<h1>Edit your Profile</h1>
+<h3><%= I18n.t('edit') %> <%= Profile.model_name.human %></h3>
 
 <%= render "form", profile: @profile %>
