--- a/app/views/applies/show.html.erb
+++ b/app/views/applies/show.html.erb
@@ -1,51 +1,32 @@
-<% if user_signed_in? || headhunter_signed_in? %>
-    <p><%= I18n.t('apply_to') %> <%= link_to @apply.job.title, @apply.job %></p>
-    <dt><%= Apply.human_attribute_name(:id) %></dt>
-    <dd><%= @apply.id %></dd>
-    <dt><%= Apply.human_attribute_name(:user_id) %></dt> 
-    <dd><%= @apply.user_id %></dd>
-    <dt><%= User.human_attribute_name(:email) %></dt> 
-    <dd><%= @apply.user.email %></dd>
-<% end %>
-
 <% if @apply.accepted_headhunter == false %>
-  <p>This application for a job offer was rejected.</p>
+  <p><%= I18n.t('rejected_apply') %></p>
   <dt><%= Apply.human_attribute_name(:feedback_headhunter) %></dt> 
   <dd><%= @apply.feedback_headhunter %></dd>
 <% end %>
 
-<% if user_signed_in? || headhunter_signed_in? %>
-    <div>
-      <div>
-        <%= button_to I18n.t('delete'), apply_path(@apply), 
+<p><%= I18n.t('apply_to') %> <%= link_to @apply.job.title, @apply.job %></p>
+<dt><%= Apply.human_attribute_name(:id) %></dt>
+<dd><%= @apply.id %></dd>
+<dt><%= Apply.human_attribute_name(:user_id) %></dt> 
+<dd><%= @apply.user_id %></dd>
+<dt><%= User.human_attribute_name(:email) %></dt> 
+<dd><%= @apply.user.email %></dd>
+
+<div>
+  <%= button_to I18n.t('delete'), apply_path(@apply), 
                                     method: :delete,
                                     data: { confirm: I18n.t('sure') } %>
-      </div>
-      <div>
-          <% if @apply.proposal %> 
-            <strong><%= link_to I18n.t('view_proposal'), apply_proposal_path(@apply, @apply.proposal.id) %></strong>  
-          <% end %>  
-      </div>
-    </div>                           
-<% end %>
+  <strong><%= link_to I18n.t('view_proposal'), apply_proposal_path(@apply, @apply.proposal.id) if @apply.proposal %></strong>  
+</div>                           
 
-<br>
 
 <% if headhunter_signed_in? %>
-    <div>
-       <div>
-        <%= link_to I18n.t('view_profile'), profile_path(@apply.user_id) %>  
-       </div>
-      <div>
-        <%= link_to I18n.t('star_apply'), stars_path(apply_id: @apply.id, profile_id: @apply.user_id, headhunter_id: current_headhunter.id), method: :post %>
-      </div>
-      <div>
-        <%= link_to I18n.t('feedback'), edit_apply_path %>
-      </div>
-      <div>
-        <%= link_to I18n.t('send_proposal'), new_apply_proposal_path(apply_id = @apply.id) %>
-      </div>
-    </div>
+  <div>  
+    <%= link_to I18n.t('view_profile'), profile_path(@apply.user_id) %>  
+    <%= link_to I18n.t('star_apply'), stars_path(apply_id: @apply.id, profile_id: @apply.user_id, headhunter_id: current_headhunter.id), method: :post %>
+    <%= link_to I18n.t('feedback'), edit_apply_path %>
+    <%= link_to I18n.t('send_proposal'), new_apply_proposal_path(apply_id = @apply.id) %>
+  </div>
 <% end %>
 
 
