--- a/app/views/proposals/edit.html.erb
+++ b/app/views/proposals/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Edit Proposal to Apply <%= @apply.id %></h1>
+<h3><%= I18n.t('edit') %> <%= Proposal.model_name.human %></h3>
 
 <%= render "form", proposal: @proposal %>
