--- a/app/views/proposals/new.html.erb
+++ b/app/views/proposals/new.html.erb
@@ -1,3 +1,3 @@
-<h1>Create Proposal to Apply <%= @apply.id %></h1>
+<h3><%= I18n.t('new') %> <%= Profile.model_name.human %></h3>
 
 <%= render "form", proposal: @proposal %>
