--- a/app/views/proposals/show.html.erb
+++ b/app/views/proposals/show.html.erb
@@ -14,9 +14,7 @@
 <dd><%= I18n.localize(@proposal.expected_start) %></dd>
 
 <% if headhunter_signed_in? %>
-  <ul>
-    <li><%= link_to I18n.t('edit'), edit_apply_proposal_path(@proposal) %></li>
-  </ul>
+  <%= link_to I18n.t('edit'), edit_apply_proposal_path(@proposal) %>
   <%= button_to I18n.t('delete'), apply_proposal_path(@proposal),
                             method: :delete,
                             data: { confirm: I18n.t('sure') } %>
