adjust div and p from forms on views

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -5,11 +5,13 @@
 <% end %>
 
 <%= form_with model: comment do |form| %>
-    <p>
-      <%= form.label :body %><br>
-      <%= form.text_area :body %>
-      <%= form.submit %>
-    </p>
     <%= form.hidden_field :profile_id %>
-  <% end %>
+    <div>
+      <%= form.label :body %>
+      <%= form.text_area :body %>
+    </div>  
+    <div>
+      <%= form.submit %>
+    </div>
+<% end %>
   
