--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,17 +1,13 @@
-  <% if headhunter_signed_in? %>
-    <b><%= I18n.t('your_comments') %></b>
-    <% @comments.each do |comment| %>
-      <% if comment.headhunter_id == current_headhunter.id %>    
-        <div>
-          <dt><%= I18n.localize(comment.datetime, format: :short) %></dt> 
-          <dd><%= comment.body %></dd>
-          <p>
-            <%= link_to I18n.t('edit'), edit_comment_path(comment) %>
-            <%= button_to I18n.t('delete'), comment_path(comment), 
-                                  method: :delete, 
-                                  data: { confirm: I18n.t('sure') } %>
-          </p>
-        </div>
-      <% end %>
-    <% end %>
-  <% end %>  
+<b><%= I18n.t('your_comments') if headhunter_signed_in? %></b>
+<% @comments.each do |comment| %>
+  <% if comment.headhunter_id == current_headhunter.id %>    
+    <div>
+      <p><%= I18n.localize(comment.datetime, format: :short) %></p>
+      <p><%= comment.body %></p>
+      <p><%= link_to I18n.t('edit'), edit_comment_path(comment) %>
+      <%= button_to I18n.t('delete'), comment_path(comment), 
+                                method: :delete, 
+                                data: { confirm: I18n.t('sure') } %></p>
+    </div>
+  <% end %>
+<% end %> 
