--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,4 +1,4 @@
-<h4><%= @job.title %></h4>
+<b><%= @job.title %></b>
 
 <dt><%= Job.human_attribute_name(:code) %></dt> 
 <dd><%= @job.code %></dd>
@@ -28,8 +28,12 @@
                               method: :delete,
                               data: { confirm: I18n.t('sure') } %>
   </div>
-  <%= render 'jobs/select_status' %>
-  <%= render 'jobs/applies' %>
+  <div>
+    <%= render 'jobs/select_status' %>
+  </div>
+  <div>
+    <%= render 'jobs/applies' %>
+  </div>   
 <% end %>
 
 
