adjust titles for h4

--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -11,12 +11,12 @@
   </div>
   
   <div>
-    <%= form.label :description %><br>
+    <%= form.label :description %>
     <%= form.text_area :description %>
   </div>
   
   <div>
-    <%= form.label :skills %><br>
+    <%= form.label :skills %>
     <%= form.text_area :skills %>
   </div>
   
