--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,4 @@
-<%= link_to root_path do %>
-  <h1>All Jobs</h1>
-<% end %>  
+<h1><%= link_to 'All Jobs', root_path %></h1> 
 <nav>
   <%= render 'layouts/navbar_user' %>
   <%= render 'layouts/navbar_headhunter' %>
