--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,17 +1,15 @@
-<h3><%= I18n.t('profiles') %></h3>
+<h4><%= I18n.t('profiles') %></h4>
 
 <% if @profiles.any? %>
     <% @profiles.each do |profile| %>
-      <dt><%= Profile.human_attribute_name(:name) %></dt>
-      <dd>
+      <p>
         <% if profile.social_name.blank? %>
           <%= link_to profile.name, profile %>
         <% else %>
           <%= link_to profile.social_name, profile %>
         <% end %>
-      </dd>
-      <dt><%= Profile.human_attribute_name(:profile_id) %></dt>
-      <dd><%= profile.id %></dd>  
+        <%= profile.id %>
+      </p>
     <% end %>
 <% else %>
     <p><%= I18n.t('no_profiles') %></p>
