--- a/app/views/proposals/new.html.erb
+++ b/app/views/proposals/new.html.erb
@@ -1,3 +1,3 @@
-<h4><%= I18n.t('new') %> <%= Profile.model_name.human %></h4>
+<h4><%= I18n.t('new') %> <%= Proposal.model_name.human %></h4>
 
 <%= render "form", proposal: @proposal %>
